Assignment/Assignment 2/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from e:\Bo\Subjects\Principles of Programming Languages\222\Assignment\Assignment 2\src\main\mt22\parser\MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{}'", "'auto'", "'break'", "'boolean'", 
                     "'do'", "'else'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'while'", 
                     "'void'", "'out'", "'continue'", "'of'", "'inherit'", 
                     "'array'", "'readInteger'", "'printInteger'", "'readFloat'", 
                     "'writeFloat'", "'readBoolean'", "'printBoolean'", 
                     "'readString'", "'printString'", "'super'", "'preventDefault'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'::'", 
                     "'('", "')'", "'['", "']'", "'.'", "','", "';'", "':'", 
                     "'{'", "'}'", "'='", "'\"'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "AUTO", "BREAK", "BOOLEAN", 
                      "DO", "ELSE", "FLOAT", "FOR", "FUNCTION", "IF", "INTEGER", 
                      "RETURN", "STRING", "WHILE", "VOID", "OUT", "CONTINUE", 
                      "OF", "INHERIT", "ARRAY", "READINTEGER", "PRINTINTEGER", 
                      "READFLOAT", "WRITEFLOAT", "READBOOLEAN", "PRINTBOOLEAN", 
                      "READSTRING", "PRINTSTRING", "SUPER", "PREVENTDEFAULT", 
                      "ADD", "MINUS", "MUL", "DIV", "MODUL", "NOT", "AND", 
                      "OR", "EQUAL", "NOTEQUAL", "LESSTHAN", "LESSEQUAL", 
                      "GREATERTHAN", "GREATEREQUAL", "DOUBLECOLON", "LP", 
                      "RP", "LSB", "RSB", "DOT", "COMMA", "SEMI", "COLON", 
                      "LB", "RB", "ASSIGN", "DOUBLEQUOTE", "COMMENT", "INTEGERLIT", 
                      "FLOATLIT", "BOOLEANLIT", "STRINGLIT", "ARRAYLIT", 
                      "IDENTIFIER", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_vardecl = 2
    RULE_vardeclAssign = 3
    RULE_vardeclAssignment = 4
    RULE_vardeclAssignBaseCase = 5
    RULE_vardeclNoAssign = 6
    RULE_parameter = 7
    RULE_identifierList = 8
    RULE_typ = 9
    RULE_funcdecl = 10
    RULE_returnType = 11
    RULE_parameterList = 12
    RULE_parameterPrime = 13
    RULE_inheritanceSubpart = 14
    RULE_arraytype = 15
    RULE_dimensions = 16
    RULE_arrayLit = 17
    RULE_expression = 18
    RULE_expr1 = 19
    RULE_expr2 = 20
    RULE_expr3 = 21
    RULE_expr4 = 22
    RULE_expr5 = 23
    RULE_expr6 = 24
    RULE_expr7 = 25
    RULE_expr8 = 26
    RULE_factor = 27
    RULE_expressionListNullable = 28
    RULE_expressionPrime = 29
    RULE_expressionListNonnull = 30
    RULE_statement = 31
    RULE_assignStmt = 32
    RULE_lhs = 33
    RULE_ifStmt = 34
    RULE_forStmt = 35
    RULE_initExpr = 36
    RULE_conditionExpr = 37
    RULE_updateExpr = 38
    RULE_whileStmt = 39
    RULE_doWhileStmt = 40
    RULE_breakStmt = 41
    RULE_continueStmt = 42
    RULE_returnStmt = 43
    RULE_callStmt = 44
    RULE_blockStmt = 45
    RULE_stmtsOrVardecls = 46
    RULE_stmtOrVardecl = 47
    RULE_statementList = 48
    RULE_vardeclList = 49
    RULE_functionCall = 50
    RULE_functionCallList = 51
    RULE_specialFunc = 52
    RULE_readInteger = 53
    RULE_printInteger = 54
    RULE_readFloat = 55
    RULE_writeFloat = 56
    RULE_readBoolean = 57
    RULE_printBoolean = 58
    RULE_readString = 59
    RULE_printString = 60
    RULE_superFunction = 61
    RULE_preventDefault = 62

    ruleNames =  [ "program", "decls", "vardecl", "vardeclAssign", "vardeclAssignment", 
                   "vardeclAssignBaseCase", "vardeclNoAssign", "parameter", 
                   "identifierList", "typ", "funcdecl", "returnType", "parameterList", 
                   "parameterPrime", "inheritanceSubpart", "arraytype", 
                   "dimensions", "arrayLit", "expression", "expr1", "expr2", 
                   "expr3", "expr4", "expr5", "expr6", "expr7", "expr8", 
                   "factor", "expressionListNullable", "expressionPrime", 
                   "expressionListNonnull", "statement", "assignStmt", "lhs", 
                   "ifStmt", "forStmt", "initExpr", "conditionExpr", "updateExpr", 
                   "whileStmt", "doWhileStmt", "breakStmt", "continueStmt", 
                   "returnStmt", "callStmt", "blockStmt", "stmtsOrVardecls", 
                   "stmtOrVardecl", "statementList", "vardeclList", "functionCall", 
                   "functionCallList", "specialFunc", "readInteger", "printInteger", 
                   "readFloat", "writeFloat", "readBoolean", "printBoolean", 
                   "readString", "printString", "superFunction", "preventDefault" ]

    EOF = Token.EOF
    T__0=1
    AUTO=2
    BREAK=3
    BOOLEAN=4
    DO=5
    ELSE=6
    FLOAT=7
    FOR=8
    FUNCTION=9
    IF=10
    INTEGER=11
    RETURN=12
    STRING=13
    WHILE=14
    VOID=15
    OUT=16
    CONTINUE=17
    OF=18
    INHERIT=19
    ARRAY=20
    READINTEGER=21
    PRINTINTEGER=22
    READFLOAT=23
    WRITEFLOAT=24
    READBOOLEAN=25
    PRINTBOOLEAN=26
    READSTRING=27
    PRINTSTRING=28
    SUPER=29
    PREVENTDEFAULT=30
    ADD=31
    MINUS=32
    MUL=33
    DIV=34
    MODUL=35
    NOT=36
    AND=37
    OR=38
    EQUAL=39
    NOTEQUAL=40
    LESSTHAN=41
    LESSEQUAL=42
    GREATERTHAN=43
    GREATEREQUAL=44
    DOUBLECOLON=45
    LP=46
    RP=47
    LSB=48
    RSB=49
    DOT=50
    COMMA=51
    SEMI=52
    COLON=53
    LB=54
    RB=55
    ASSIGN=56
    DOUBLEQUOTE=57
    COMMENT=58
    INTEGERLIT=59
    FLOATLIT=60
    BOOLEANLIT=61
    STRINGLIT=62
    ARRAYLIT=63
    IDENTIFIER=64
    WS=65
    UNCLOSE_STRING=66
    ILLEGAL_ESCAPE=67
    ERROR_CHAR=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def decls(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.DeclsContext)
            else:
                return self.getTypedRuleContext(MT22Parser.DeclsContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 126
                self.decls()
                self.state = 129 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MT22Parser.IDENTIFIER):
                    break

            self.state = 131
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decls




    def decls(self):

        localctx = MT22Parser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardeclAssign(self):
            return self.getTypedRuleContext(MT22Parser.VardeclAssignContext,0)


        def vardeclNoAssign(self):
            return self.getTypedRuleContext(MT22Parser.VardeclNoAssignContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecl)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.vardeclAssign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.vardeclNoAssign()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclAssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def vardeclAssignment(self):
            return self.getTypedRuleContext(MT22Parser.VardeclAssignmentContext,0)


        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def vardeclAssignBaseCase(self):
            return self.getTypedRuleContext(MT22Parser.VardeclAssignBaseCaseContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardeclAssign




    def vardeclAssign(self):

        localctx = MT22Parser.VardeclAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardeclAssign)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.match(MT22Parser.IDENTIFIER)
                self.state = 142
                self.match(MT22Parser.COMMA)
                self.state = 143
                self.vardeclAssignment()
                self.state = 144
                self.match(MT22Parser.COMMA)
                self.state = 145
                self.expression()
                self.state = 146
                self.match(MT22Parser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.vardeclAssignBaseCase()
                self.state = 149
                self.match(MT22Parser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclAssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def vardeclAssignment(self):
            return self.getTypedRuleContext(MT22Parser.VardeclAssignmentContext,0)


        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def vardeclAssignBaseCase(self):
            return self.getTypedRuleContext(MT22Parser.VardeclAssignBaseCaseContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardeclAssignment




    def vardeclAssignment(self):

        localctx = MT22Parser.VardeclAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardeclAssignment)
        try:
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.match(MT22Parser.IDENTIFIER)
                self.state = 154
                self.match(MT22Parser.COMMA)
                self.state = 155
                self.vardeclAssignment()
                self.state = 156
                self.match(MT22Parser.COMMA)
                self.state = 157
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.vardeclAssignBaseCase()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclAssignBaseCaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def arraytype(self):
            return self.getTypedRuleContext(MT22Parser.ArraytypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardeclAssignBaseCase




    def vardeclAssignBaseCase(self):

        localctx = MT22Parser.VardeclAssignBaseCaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vardeclAssignBaseCase)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(MT22Parser.IDENTIFIER)
            self.state = 163
            self.match(MT22Parser.COLON)
            self.state = 166
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.AUTO, MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.state = 164
                self.typ()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.state = 165
                self.arraytype()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 168
            self.match(MT22Parser.ASSIGN)
            self.state = 169
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclNoAssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifierList(self):
            return self.getTypedRuleContext(MT22Parser.IdentifierListContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def arraytype(self):
            return self.getTypedRuleContext(MT22Parser.ArraytypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardeclNoAssign




    def vardeclNoAssign(self):

        localctx = MT22Parser.VardeclNoAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vardeclNoAssign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.identifierList()
            self.state = 172
            self.match(MT22Parser.COLON)
            self.state = 175
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.AUTO, MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.state = 173
                self.typ()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.state = 174
                self.arraytype()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 177
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def arraytype(self):
            return self.getTypedRuleContext(MT22Parser.ArraytypeContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_parameter




    def parameter(self):

        localctx = MT22Parser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 179
                self.match(MT22Parser.INHERIT)


            self.state = 183
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT:
                self.state = 182
                self.match(MT22Parser.OUT)


            self.state = 185
            self.match(MT22Parser.IDENTIFIER)
            self.state = 186
            self.match(MT22Parser.COLON)
            self.state = 189
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.AUTO, MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.state = 187
                self.typ()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.state = 188
                self.arraytype()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def identifierList(self):
            return self.getTypedRuleContext(MT22Parser.IdentifierListContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_identifierList




    def identifierList(self):

        localctx = MT22Parser.IdentifierListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_identifierList)
        try:
            self.state = 195
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 191
                self.match(MT22Parser.IDENTIFIER)
                self.state = 192
                self.match(MT22Parser.COMMA)
                self.state = 193
                self.identifierList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 194
                self.match(MT22Parser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_typ




    def typ(self):

        localctx = MT22Parser.TypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_typ)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 197
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.AUTO) | (1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
